--- a/DeepLearning_MNIST_Data.ipynb
+++ b/DeepLearning_MNIST_Data.ipynb
@@ -16,7 +16,7 @@
         "id": "0lskYy4R24zI"
       },
       "source": [
-        "# Deep-Learning Lab Session using MNIST Dataset"
+        "# Deep-Learning using MNIST Dataset\n"
       ]
     },
     {
